[package]
name = "wolfe_bfgs"
version = "0.1.6"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>", "SauersML"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A dense BFGS optimization algorithm in Rust, with a Strong Wolfe line search and initial Hessian scaling."
build = "build.rs"
readme = "README.md"
documentation = "https://github.com/SauersML/"
repository = "https://github.com/SauersML/wolfe_bfgs"
keywords = ["optimization", "bfgs", "science"]
categories = ["science", "algorithms"]

[workspace]

[dependencies]
log = "0.4.29"
ndarray = "0.17.1"
thiserror = "2.0.17"

[dev-dependencies]
spectral = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[build-dependencies]
grep = "0.4.1"
walkdir = "2.5.0"
