[package]
name = "opt"
version = "0.2.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>", "SauersML"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Dense nonlinear optimization in Rust with BFGS, Newton trust-region, and ARC."
readme = "README.md"
documentation = "https://docs.rs/opt"
repository = "https://github.com/SauersML/opt"
keywords = ["optimization", "bfgs", "newton"]
categories = ["science", "algorithms"]

[dependencies]
log = "0.4.29"
ndarray = "0.17.1"
thiserror = "2.0.17"

[dev-dependencies]
spectral = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
