[package]
name = "wolfe_bfgs"
version = "0.3.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>", "SauersML"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Dense BFGS optimization in Rust with Strong Wolfe line search."
readme = "README.md"
documentation = "https://docs.rs/wolfe_bfgs"
repository = "https://github.com/SauersML/wolfe_bfgs"
keywords = ["optimization", "bfgs", "wolfe"]
categories = ["science", "algorithms"]

[dependencies]
opt = { path = "../opt", version = "0.1.0" }
