[package]
name = "wolfe_bfgs"
version = "0.4.0"
authors = ["Paul Kernfeld <paulkernfeld@gmail.com>", "SauersML"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Focused dense BFGS optimization in Rust, reexported from opt."
readme = "README.md"
documentation = "https://docs.rs/wolfe_bfgs"
repository = "https://github.com/SauersML/opt"
keywords = ["optimization", "bfgs", "wolfe"]
categories = ["science", "algorithms"]

[dependencies]
opt = { path = "../opt", version = "0.2.0" }
